# FrapExamples

doc/system/definitions/resistance/: markov_1.py  markov_2.py  markov_2.txt  markov_3.py
t02_multithreading-mandelbrot/: CMakeLists.txt  LibBmp.cpp  LibBmp.h  LibMandel.cpp  LibMandel.h  MandelBlockFilling.cpp  MandelBlockFilling.h  MandelbrotCreating.cpp  MandelbrotCreating.h  Supervising.cpp  Supervising.h  UserInteracting.cpp  computing.c  env.h  main.cpp  mandelbrot.comp  meson.build
t03_log-catching/: LogCatching.cpp  LogCatching.h  Supervising.h
t04_lines/: README.md  meson.build
t04_lines/src/: FileSearching.cpp  FileSearching.h  MetricsGenerating.cpp  MetricsGenerating.h  MsgDispatching.cpp  MsgDispatching.h  Supervising.cpp  Supervising.h  env.h  main.cpp
tools-dev/start/: callgrind1.sh  valgrind.sh
